--- a/_config.yml
+++ b/_config.yml
@@ -52,7 +52,7 @@ titlecase: true       # Converts page and post titles to titlecase
 # list each of the sidebar modules you want to include, in the order you want them to appear.
 # To add custom asides, create files in /source/_includes/custom/asides/ and add them to the list like 'custom/asides/custom_aside_name.html'
 default_asides: [custom/asides/about.html, asides/recent_posts.html,
-                 asides/github.html, custom/asides/category_list.html]
+                 custom/asides/category_list.html]
 
 # Each layout uses the default asides, but they can have their own asides instead. Simply uncomment the lines below
 # and add an array with the asides you want to use.
@@ -66,7 +66,7 @@ default_asides: [custom/asides/about.html, asides/recent_posts.html,
 
 # Github repositories
 github_user: mossberg
-github_repo_count: 3
+github_repo_count: 0
 github_show_profile_link: true
 github_skip_forks: true
 
