blog.mark.lc -> mark.systems

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://blog.mark.lc
+url: http://mark.systems
 title: Mark Mossberg's Blog
 subtitle: Hacker Nonsense
 author: Mark Mossberg
