--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://mark.systems
+url: http://vmresu.me
 title: Mark Mossberg's Blog
 subtitle: Hacker Nonsense
 author: Mark Mossberg
